# petrou

./: .gitignore  LICENSE  README.md  pyproject.toml
petrou/: __init__.py  exceptions.py
petrou/analysis/: __init__.py  profile.py
petrou/metrics/: __init__.py  segmentation.py
petrou/objectives/: __init__.py  entropy.py  variance.py
petrou/optimization/: __init__.py  exhaustive.py  pso.py  sa.py  search_space.py
petrou/thresholding/: __init__.py  bi_level.py  multi_level.py
