[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "petrou"
dynamic = ["version"]  
authors = [
  { name="Enzo Passos Silva Ribeiro", email="enzorib.dev@gmail.com" },
]
description = "A modular Python library for image thresholding and segmentation optimization."
readme = "DOCUMENTATION.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
vis = ["opencv-python>=4.0.0"]

[project.urls]
"Homepage" = "https://github.com/enzoribeirodev/petrou"
"Bug Tracker" = "https://github.com/enzoribeirodev/petrou/issues"
"Documentation" = "https://github.com/enzoribeirodev/petrou/blob/main/README.md"

[tool.setuptools.packages.find]
include = ["petrou", "petrou.*"]

[tool.setuptools.dynamic]
version = {attr = "petrou.__version__"}